# day5_cohort

./: README.md  auth_utils.py  courses.py  database.db  database.py  dependencies.py  index.html  instructor_dashboard.html  instructor_dashboard_new.html  main.py  models.py  razorpay.html  schemas.py  script.js  style.css  test2.html  test3.html
backend/: api_docs.md  auth.py  courses.py  database.db  dependencies.py  live_classes.py  main.py  models.py  payment.py  pyproject.toml  schemas.py
backend/static/: register.html
backend/static/css/: style.css
backend/static/js/: api.js  auth.js  course-form.js  student.js
frontend/: course.html  instructor.html  live.html
frontend/css/: style.css
frontend/js/: api.js  auth.js  instructor.js  payment.js  student.js
static/: course-form.html  course.html  index.html  instructor.html  login.html  student.html
static/js/: instructor.js  live.js  payment.js
student/: student.css  student.html  student.js
