[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.135.1",
    "pyjwt>=2.12.0",
    "python-dotenv>=1.2.2",
    "razorpay>=2.0.1",
    "sqlmodel>=0.0.37",
    "websockets>=16.0",
]
